--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ readme = "README.md"
 python = "^3.12"
 rich = "^13.9.2"
 
+[tool.poetry.scripts]
+kmtracker = "kmtracker.cli:main"
 
 [build-system]
 requires = ["poetry-core"]
