--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.12"
 rich = "^13.9.2"
+gpxpy = "^1.6.2"
 
 [tool.poetry.scripts]
 kmtracker = "kmtracker.cli:main"
