--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,3 +19,8 @@ kmtracker = "kmtracker.cli:main"
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[dependency-groups]
+dev = [
+    "pytest>=8.4.1",
+]
