--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,13 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "fastapi>=0.116.1",
     "gpxpy>=1.6.2",
+    "jinja2>=3.1.6",
+    "pydantic>=2.11.7",
     "python-dateutil>=2.9.0.post0",
     "rich>=13.9.4",
+    "uvicorn>=0.35.0",
 ]
 
 [project.scripts]
