--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "jinja2>=3.1.6",
     "pydantic>=2.11.7",
     "python-dateutil>=2.9.0.post0",
+    "python-multipart>=0.0.20",
     "rich>=13.9.4",
     "uvicorn>=0.35.0",
 ]
